--- a/.env
+++ b/.env
@@ -1,4 +1,22 @@
+# Broker settings
 VITE_ORDERLY_BROKER_ID=demo
-VITE_ORDERLY_BROKER_NAME=Demo
-VITE_APP_NAME=Orderly Demo
-VITE_APP_DESCRIPTION=Orderly Demo
+VITE_ORDERLY_BROKER_NAME=Shitzu DEX
+
+# Meta tags
+VITE_APP_NAME=Shitzu DEX
+VITE_APP_DESCRIPTION=Shitzu DEX - A DEX powered by Orderly Network
+
+# Social Media Links
+VITE_TELEGRAM_URL=https://t.me/Shitzu_Community
+VITE_DISCORD_URL=
+VITE_TWITTER_URL=https://x.com/shitzuonnear
+
+# Logo flags - indicates if logos have been set
+VITE_HAS_PRIMARY_LOGO=false
+VITE_HAS_SECONDARY_LOGO=false
+
+# Navigation menu settings
+VITE_ENABLED_MENUS=
+
+# WalletConnect configuration
+VITE_WALLET_CONNECT_PROJECT_ID=
